--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -680,6 +680,10 @@ video {
   font-weight: 700;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
@@ -706,6 +710,14 @@ video {
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.opacity-40 {
+  opacity: 0.4;
 }
 
 /* custom variables */
@@ -753,22 +765,17 @@ main>div {
   border-radius: 50%;
   background: white;
   cursor: pointer;
-  box-shadow: 0 0 2px 0 #555;
+  box-shadow: 0 0 1rem 0 #888787;
 }
 
 .slider::-webkit-slider-thumb:active {
-  background-blend-mode: overlay;
-  background-color: rgb(3, 150, 150);
+  background: rgb(214, 233, 231);
 }
-
-/* The checkbox-container */
 
 .checkbox-container {
   position: relative;
   cursor: pointer;
 }
-
-/* Hide the browser's default checkbox */
 
 .checkbox-container input {
   opacity: 0;
@@ -777,8 +784,6 @@ main>div {
   width: 0;
 }
 
-/* Create a custom checkbox */
-
 .checkmark {
   height: 1.3rem;
   width: 1.3rem;
@@ -786,13 +791,9 @@ main>div {
   position: relative;
 }
 
-/* When the checkbox is checked, add a blue background */
-
 .checkbox-container input:checked~.checkmark {
   background-color: var(--cl-Mint-Green);
 }
-
-/* Create the checkmark/indicator (hidden when not checked) */
 
 .checkmark:after {
   content: "";
@@ -800,13 +801,9 @@ main>div {
   display: none;
 }
 
-/* Show the checkmark when checked */
-
 .checkbox-container input:checked~.checkmark:after {
   display: block;
 }
-
-/* Style the checkmark/indicator */
 
 .checkbox-container .checkmark:after {
   left: 7px;
